# amusiment

./: .gitignore  README.md  pyproject.toml
ai/: __init__.py
ai/inference/: __init__.py  context_window.py  prompt_engine.py
ai/models/: __init__.py  basic_analyzer.py  chord_generator.py  drum_generator.py  melody_generator.py  theory.py
core/: __init__.py
core/engine/: __init__.py  clock.py  events.py  sequencer.py  transport.py
core/export/: __init__.py  midi.py
core/importer/: __init__.py  midi.py
core/io/: __init__.py  project_archive.py
core/model/: __init__.py  automation.py  clip.py  device.py  mixer.py  note.py  project.py  time_model.py  track.py
core/plugin/: __init__.py  registry.py
core/plugin/interfaces/: __init__.py  ai_analyzer.py  ai_generator.py  base.py  effect.py  exporter.py  importer.py  instrument.py  ui_widget.py
core/state/: __init__.py  actions.py  history.py  store.py
tests/: __init__.py  test_ai_models.py  test_engine.py  test_midi_exporter.py  test_midi_importer.py  test_models.py  test_project_archive.py
ui/: __init__.py
ui/design/: __init__.py
ui/design/components/: __init__.py
ui/design/tokens/: __init__.py
ui/panels/: __init__.py
ui/shell/: __init__.py
