[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amusiment"
version = "0.1.0"
description = "AI-driven music composition framework."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["ai*", "core*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
